--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hangman",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.5"
+    "@tailwindcss/vite": "^4.1.13",
+    "astro": "5.13.5",
+    "tailwindcss": "^4.1.13"
+  },
+  "devDependencies": {
+    "esbuild": "0.25.9"
   }
 }
