fix: change pnpm install option to prevent frozen lockfile issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         cache: 'pnpm'
         
     - name: 📦 Install dependencies
-      run: pnpm install --frozen-lockfile
+      run: pnpm install --no-frozen-lockfile
       
     - name: 🔍 Type check
       run: pnpm astro check
@@ -60,7 +60,7 @@ jobs:
         cache: 'pnpm'
         
     - name: 📦 Install dependencies
-      run: pnpm install --frozen-lockfile
+      run: pnpm install --no-frozen-lockfile
       
     - name: 🏗️ Build project
       run: pnpm build
