fix: add license field to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hangman",
   "type": "module",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
