--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "biome lint --write .",
+    "format": "biome format --write ."
   },
   "dependencies": {
     "@astrojs/preact": "4.1.0",
