fix: add lint step to CI workflow for improved code quality

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,10 @@ jobs:
       
     - name: 🔍 Type check
       run: pnpm astro check
-      
+
+    - name: 🧹 Lint code
+      run: pnpm lint
+
     - name: 🏗️ Build project
       run: pnpm build
       
