fix: implement code changes to enhance functionality and improve performance

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/preact": "4.1.0",
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/vite": "4.1.12",
     "@vercel/analytics": "^1.5.0",
     "astro": "5.13.5",
     "preact": "10.27.1",
-    "tailwindcss": "4.1.12"
+    "tailwindcss": "4.1.12",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "esbuild": "0.25.9"
