--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/preact": "4.1.0",
+    "@astrojs/sitemap": "^3.5.1",
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/vite": "4.1.12",
     "@vercel/analytics": "^1.5.0",
